CB-8494 Integrate Audit service with Environment service. Send the audit events to the central audit service