@@ -14,6 +14,7 @@ import org.mockito.InjectMocks;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import com.sequenceiq.cloudbreak.common.json.Json;
+import com.sequenceiq.cloudbreak.structuredevent.event.cdp.CDPOperationDetails;
 import com.sequenceiq.cloudbreak.structuredevent.event.rest.RestCallDetails;
 import com.sequenceiq.cloudbreak.structuredevent.event.rest.RestRequestDetails;
 import com.sequenceiq.cloudbreak.structuredevent.event.rest.RestResponseDetails;
@@ -41,7 +42,7 @@ public class CDPRestCommonServiceTest {
         Map<String, String> expected = new HashMap<>();
         expected.put(CLUSTER_NAME, "name1");
         expected.put(CLUSTER_CRN, "crn1");
-        Map<String, String> actual = underTest.addClusterCrnAndNameIfPresent(restCallDetails, restParams, CLUSTER_NAME, CLUSTER_CRN);
+        Map<String, String> actual = underTest.addClusterCrnAndNameIfPresent(restCallDetails, null, restParams, CLUSTER_NAME, CLUSTER_CRN);
         assertEquals(expected, actual);
     }
 
@@ -57,7 +58,7 @@ public class CDPRestCommonServiceTest {
         Map<String, Object> expected = new HashMap<>();
         expected.put(CLUSTER_NAME, "name2");
         expected.put(CLUSTER_CRN, "crn2");
-        Map<String, String> actual = underTest.addClusterCrnAndNameIfPresent(restCallDetails, Collections.emptyMap(), CLUSTER_NAME, CLUSTER_CRN);
+        Map<String, String> actual = underTest.addClusterCrnAndNameIfPresent(restCallDetails, null, Collections.emptyMap(), CLUSTER_NAME, CLUSTER_CRN);
         assertEquals(expected, actual);
     }
 
@@ -72,7 +73,7 @@ public class CDPRestCommonServiceTest {
         Map<String, Object> expected = new HashMap<>();
         expected.put(CLUSTER_NAME, "name3");
         expected.put(CLUSTER_CRN, "crn3");
-        Map<String, String> actual = underTest.addClusterCrnAndNameIfPresent(restCallDetails, Collections.emptyMap(), CLUSTER_NAME, CLUSTER_CRN);
+        Map<String, String> actual = underTest.addClusterCrnAndNameIfPresent(restCallDetails, null, Collections.emptyMap(), CLUSTER_NAME, CLUSTER_CRN);
         assertEquals(expected, actual);
     }
 
@@ -87,7 +88,7 @@ public class CDPRestCommonServiceTest {
         Map<String, Object> expected = new HashMap<>();
         expected.put(CLUSTER_NAME, "names1,names2");
         expected.put(CLUSTER_CRN, "crns1,crns2");
-        Map<String, String> actual = underTest.addClusterCrnAndNameIfPresent(restCallDetails, Collections.emptyMap(), CLUSTER_NAME, CLUSTER_CRN);
+        Map<String, String> actual = underTest.addClusterCrnAndNameIfPresent(restCallDetails, null, Collections.emptyMap(), CLUSTER_NAME, CLUSTER_CRN);
         assertEquals(expected, actual);
     }
 
@@ -101,7 +102,7 @@ public class CDPRestCommonServiceTest {
         restCallDetails.setRestRequest(request);
         restCallDetails.setRestResponse(response);
         UnsupportedOperationException exception = assertThrows(UnsupportedOperationException.class,
-                () -> underTest.addClusterCrnAndNameIfPresent(restCallDetails, Collections.emptyMap(), CLUSTER_NAME, CLUSTER_CRN));
+                () -> underTest.addClusterCrnAndNameIfPresent(restCallDetails, null, Collections.emptyMap(), CLUSTER_NAME, CLUSTER_CRN));
         assertEquals(exception.getMessage(), "Cannot determine the resource crn or name, so we does not support for auditing for method: "
                 + "POST, uri: uri, body: null");
     }
@@ -120,7 +121,28 @@ public class CDPRestCommonServiceTest {
         Map<String, Object> expected = new HashMap<>();
         expected.put("names", "name1,name2");
         expected.put("crns", "crn1,crn2");
-        Map<String, String> actual = underTest.addClusterCrnAndNameIfPresent(restCallDetails, Collections.emptyMap(), "names", "crns");
+        Map<String, String> actual = underTest.addClusterCrnAndNameIfPresent(restCallDetails, null, Collections.emptyMap(), "names", "crns");
+        assertEquals(expected, actual);
+    }
+
+    @Test
+    public void testWhenNameAndResourceCrnComeFromTheOperationDetails() {
+        RestCallDetails restCallDetails = new RestCallDetails();
+        RestRequestDetails request = new RestRequestDetails();
+        RestResponseDetails response = new RestResponseDetails();
+        response.setBody(new Json(Map.of("responses", List.of(
+                Map.of("name", "name1", "crn", "crn1"),
+                Map.of("name", "name2", "crn", "crn2")
+        ))).getValue());
+        CDPOperationDetails operationDetails = new CDPOperationDetails();
+        operationDetails.setResourceCrn("opCrn");
+        operationDetails.setResourceName("opName");
+        restCallDetails.setRestRequest(request);
+        restCallDetails.setRestResponse(response);
+        Map<String, Object> expected = new HashMap<>();
+        expected.put("names", "opName");
+        expected.put("crns", "opCrn");
+        Map<String, String> actual = underTest.addClusterCrnAndNameIfPresent(restCallDetails, operationDetails, Collections.emptyMap(), "names", "crns");
         assertEquals(expected, actual);
     }
 }
